--- a/tmpl/view.html
+++ b/tmpl/view.html
@@ -1,3 +1,11 @@
+<!Doctype html>
+<html>
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<title>GoWiki</title>
+</head>
 <h1>{{.Title}}</h1>
 <p>[<a href="/edit/{{.Title}}">edit</a>]</p>
-<div>{{ printf "%s" .Body}}</div>
+<!-- <div>{{ printf "%s" .Body}}</div> -->
+<div>{{.BodyHTML}}</div>
+</html>
